ping winRM working

--- a/compose.yaml
+++ b/compose.yaml
@@ -16,6 +16,7 @@ services:
     volumes:
       - jenkins-data:/var/jenkins_home
       - jenkins-docker-certs:/certs/client:ro
+      - ./ansible:/tmp/ansible
     depends_on:
       - docker
 
@@ -29,12 +30,11 @@ services:
     networks:
       - jenkins
     privileged: true
-    domainname: codespaces.io
     restart: always
     volumes:
       - jenkins-docker-certs:/certs/client
       - jenkins-data:/var/jenkins_home
-
+      - ./ansible:/tmp/ansible
 networks:
   jenkins:
 
