--- a/ansible/roles/backup_and_deploy_iis_websites/vars/main.yml
+++ b/ansible/roles/backup_and_deploy_iis_websites/vars/main.yml
@@ -4,10 +4,12 @@ websites:
     physical_path: 'C:\\inetpub\\wwwroot\\single-page-app'
     local_source: 'wwwroot/single-page-app'
     port: 80
+    application_pool: 'AppPoolA'
   - name: 'static-web'
     physical_path: 'C:\\inetpub\\wwwroot\\static-web'
     local_source: 'wwwroot/static-web'
     port: 81
+    application_pool: 'AppPoolB'
 
 backup_dir: 'C:\\backup'
-application_pool: 'DefaultAppPool'
+
