add asp and spa projects with build step

--- a/ansible/roles/backup_and_deploy_iis_websites/vars/main.yml
+++ b/ansible/roles/backup_and_deploy_iis_websites/vars/main.yml
@@ -1,13 +1,13 @@
 ---
 websites:
-  - name: 'single-page-app'
-    physical_path: 'C:\\inetpub\\wwwroot\\single-page-app'
-    local_source: 'wwwroot/single-page-app'
+  - name: 'aspnet-core-app'
+    physical_path: 'C:\\inetpub\\wwwroot\\aspnet-core-app'
+    local_source: 'wwwroot/aspnet-core-app'
     port: 80
     application_pool: 'AppPoolA'
-  - name: 'static-web'
-    physical_path: 'C:\\inetpub\\wwwroot\\static-web'
-    local_source: 'wwwroot/static-web'
+  - name: 'react-vite-app'
+    physical_path: 'C:\\inetpub\\wwwroot\\react-vite-app'
+    local_source: 'wwwroot/react-vite-app'
     port: 81
     application_pool: 'AppPoolB'
 
